k8s-deployment/deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:latest
          args:
            - --api.insecure
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: dashboard
              containerPort: 8080
              hostPort: 8080
      nodeSelector:
        ingress-ready: "true"
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Equal"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/master"
          operator: "Equal"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik
spec:
  # We use NodePort instead of LoadBalancer to be able to access externally when using kind
  # see https://kind.sigs.k8s.io/docs/user/ingress
  type: NodePort
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik
spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sybil-api
  namespace: default
  labels:
    app: sybil-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sybil-api
  template:
    metadata:
      labels:
        app: sybil-api
    spec:
      containers:
        - name: sybil-api
          image: manifoldlabs/sybil-api:dev
          ports:
            - name: web
              containerPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: searxng
  namespace: default
  labels:
    app: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:latest
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: "/etc/searxng"
            # - name: config
            #   mountPath: "/etc/searxng"
            #   subPath: uwsgi.ini
      volumes:
        - name: config
          configMap:
            name: searxng-config
            items:
              - key: "settings.yml"
                path: "settings.yml"
              - key: "uwsgi.ini"
                path: "uwsgi.ini"
              - key: "limiter.toml"
                path: "limiter.toml"
---
apiVersion: v1
kind: Service
metadata:
  name: sybil-api
  namespace: default
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: sybil-api
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: default
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    app: searxng
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sybil-api-ingress
  namespace: default
spec:
  rules:
    - host: api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sybil-api
                port:
                  number: 80
